05/14/05
- do not center the editor window at creation (Tiger compatibility)

05/13/05
- debugger location is now centered
- debugger input text displays now tokens if they are available (i.e. after a rewind)
- disable some menu items while the debugger is running
- XJLibrary now closes the first created document if it is untouched and another document is opened

05/12/05
- new tokens for (, ) and non white space characters -> they are now correctly colorized
- simple comment token was not created correctly when end of text was reached instead of new line
- disable GPathGroup timer when not visible (reduce CPU usage)

- Build & Debug: input text was correctly written but the remote parser was launched before ;-)
- removed icons in Find Usages tree view
- cancel/okButton OS compliant
- default document size is now related to the available screen size
- debugger tokens boxes can now be displayed

04/14/05
- rename

04/06/05
- improved interface
- all icons have been re-created (no more IntelliJ dependency)

- find usages
- local/remote debugger
- gutter: position of each rule
- gutter: toggle breakpoint

- goto previous and next breakpoint
- goto line or character

- expand all tree nodes after running the interpreter

- copy and cut now correctly copy any hidden action(s)
- fixed the problem where hidden actions were removed when applying syntax coloring

03/16/05
- correctly handle escape sequence in lexer
- fix a bug where complex comment would not be lexed if end of text reached
- improved syntax coloring speed and accuracy

03/10/05
- display now correctly multiple errors for the same rule
- improved display speed when selecting a rule in the list (using the thread sleep threshold)

03/08/05
- syntax colorization
- improved thread management when typing text (new latch method - wait that the user is not typing for a
  certain amount of time before computing in the background)
- if error paths exist, the enabled path is displayed by default automatically